<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="20dp"
    android:background="@android:color/white"
    android:gravity="right"
    android:layout_height="match_parent">

    <include layout="@layout/include_str"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:text="@string/block_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/base_padding"
            android:textColor="@android:color/black"
            android:id="@+id/textView2" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_gray"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/area01"
            style="@style/area_layout">

            <TextView
                style="@style/area_text"
                android:text="@string/area_str_01"/>
            <TextView
                style="@style/area_text"
                android:text="@string/area_01"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area02"
            style="@style/area_layout">

            <TextView
                style="@style/area_text"
                android:text="@string/area_str_02"/>
            <TextView
                style="@style/area_text"
                android:text="@string/area_02"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area03"
            style="@style/area_layout">

            <TextView
                style="@style/area_text"
                android:text="@string/area_str_03"/>
            <TextView
                style="@style/area_text"
                android:text="@string/area_03"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area04"
            style="@style/area_layout">

            <TextView
                style="@style/area_text"
                android:text="@string/area_str_04"/>
            <TextView
                style="@style/area_text"
                android:text="@string/area_04"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area05"
            style="@style/area_layout">

            <TextView
                style="@style/area_text"
                android:text="@string/area_str_05"/>
            <TextView
                style="@style/area_text"
                android:text="@string/area_05"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/area06"
            style="@style/area_layout">

            <TextView
                style="@style/area_text"
                android:text="@string/area_str_06"/>
            <TextView
                style="@style/area_text"
                android:text="@string/area_06"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area07"
            style="@style/area_layout">

            <TextView
                style="@style/area_text"
                android:text="@string/area_str_07"/>
            <TextView
                style="@style/area_text"
                android:text="@string/area_07"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area08"
            style="@style/area_layout">

            <TextView
                style="@style/area_text"
                android:text="@string/area_str_08"/>
            <TextView
                style="@style/area_text"
                android:text="@string/area_08"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area09"
            style="@style/area_layout">

            <TextView
                style="@style/area_text"
                android:text="@string/area_str_09"/>
            <TextView
                style="@style/area_text"
                android:text="@string/area_09"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area10"
            style="@style/area_layout">

            <TextView
                style="@style/area_text"
                android:text="@string/area_str_10"/>
            <TextView
                style="@style/area_text"
                android:text="@string/area_10"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/area11"
            style="@style/area_layout">

            <TextView
                style="@style/area_text"
                android:text="@string/area_str_11"/>
            <TextView
                style="@style/area_text"
                android:text="@string/area_11"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area12"
            style="@style/area_layout">

            <TextView
                style="@style/area_text"
                android:text="@string/area_str_12"/>
            <TextView
                style="@style/area_text"
                android:text="@string/area_12"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area13"
            style="@style/area_layout">

            <TextView
                style="@style/area_text"
                android:text="@string/area_str_13"/>
            <TextView
                style="@style/area_text"
                android:text="@string/area_13"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area14"
            style="@style/area_layout">

            <TextView
                style="@style/area_text"
                android:text="@string/area_str_14"/>
            <TextView
                style="@style/area_text"
                android:text="@string/area_14"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area15"
            style="@style/area_layout">

            <TextView
                style="@style/area_text"
                android:text="@string/area_str_15"/>
            <TextView
                style="@style/area_text"
                android:text="@string/area_15"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/area16"
            style="@style/area_layout">

            <TextView
                style="@style/area_text"
                android:text="@string/area_str_16"/>
            <TextView
                style="@style/area_text"
                android:text="@string/area_16"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area17"
            style="@style/area_layout">

            <TextView
                style="@style/area_text"
                android:text="@string/area_str_17"/>
            <TextView
                style="@style/area_text"
                android:text="@string/area_17"/>

        </LinearLayout>


        <LinearLayout
            style="@style/area_layout"
            android:layout_height="match_parent"
            android:layout_weight="3">

        </LinearLayout>
    </LinearLayout>
    </LinearLayout>

    <TextView
        android:text="@string/block_area_etc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="@dimen/base_padding"
        android:textColor="@android:color/black"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/base_padding">
    <LinearLayout
        android:id="@+id/area18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/base_padding"
        android:background="@drawable/selector_area_click">

        <TextView
            style="@style/area_text"
            android:text="@string/area_etc"/>

    </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"/>
        <CheckBox
            android:id="@+id/cb_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/deep_dark_gray"
            android:padding="@dimen/base_padding"
            android:background="@drawable/round_black_gray"
            android:text="@string/select_all"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>