<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/border_box"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_gray"
                android:textSize="15sp"
                android:text="@string/finish"/>
        </LinearLayout>
        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/font_gray"
            android:gravity="center_horizontal"
            android:textSize="13sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:text="@string/finish_str"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cancel"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:textSize="17sp"
            android:textColor="@android:color/white"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="26dp"
            android:text="@string/cancel"
            android:background="@drawable/round_black_gray_left" />
        <TextView
            android:id="@+id/ok"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:textSize="17sp"
            android:textColor="@android:color/white"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="26dp"
            android:text="@string/ok"
            android:background="@drawable/round_black_gray_right" />
    </LinearLayout>


    </LinearLayout>