<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >
    <LinearLayout
        android:id="@+id/linear_background"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_base_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="23.33dp"
        android:paddingRight="23.33dp"
        android:paddingTop="23.33dp"
        >

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/font_gray"
                android:gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="numberSigned"
                android:textColorHint="@color/default_overlay_color"
                android:hint="@string/hint_phone"/>
            <EditText
                android:id="@+id/et_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/font_gray"
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:singleLine="true"
                android:textColorHint="@color/default_overlay_color"
                android:hint="@string/hint_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/btn_cancel"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="53dp"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:textColor="@android:color/white"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="26dp"
                    android:text="@string/cancel"
                    android:background="@drawable/round_black_gray_left" />
                <TextView
                    android:id="@+id/btn_edit"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="53dp"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="1dp"
                    android:text="@string/edit"
                    android:background="@drawable/round_black_gray_right" />
            </LinearLayout>


        </LinearLayout>

</RelativeLayout>